Updating styles and staff images

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header {
 img {
    display: inline-block;
    height: auto;
-   width: 80%;
+   width: 90%;
    margin-top: 1vh;
 }
 
@@ -60,6 +60,10 @@ h2 {
     margin-top: 7vh;
 }
 
+p {
+    font-size: 1em;
+}
+
 .main-items {
     font-weight: bold;
     text-decoration: underline;
@@ -100,11 +104,15 @@ footer {
 
 /* Media Queries */
 
-/* This media query changes the navigation at the top so it is spread out horizontally for larger screens while remaining vertical for small screens. It also rearranges the services horizontally. */
+/* This media query changes the navigation at the top so it is spread out horizontally for larger screens while remaining vertical for small screens. */
 
 @media screen and (min-width: 500px) {
     #top-nav {
        display:inline-block;
+    }
+
+    img {
+        width: 85%;
     }
     
     body, header {
@@ -127,6 +135,10 @@ footer {
         margin-bottom: 1%;
     }
 
+    p {
+        font-size: 1.2em;
+    }
+
     footer {
         display: flex;
         flex-direction: row;
@@ -136,12 +148,27 @@ footer {
     }
 }
 
-/* This media query fixes the width of images so they stay at a nice size for viewing on large screens. It also rearranges flex items in the sections to display horizontally rather than continuing to stretch with the page. */
+/* This media query adjusts the width of images so they stay at a nice size for viewing on mid-size screens and/or tablets in landscape mode. */
 
 @media screen and (min-width: 800px) {
-    img {
-        width: 450px;
+   
+       img {
+        width: 60%;
     }
+}
+
+/* This media query displays the contents of the About, Services, and Gallery sections in columns rather than continuing to have the text and images expand. */
+@media screen and (min-width: 1000px) {
+    img {
+        width: 50%;
+    }
+    
+    .gallery-image {
+        min-width: 30vw;
+        max-width: 35vw;
+    }
+
+    
    .container {
         display: flex;    
         flex-direction: row;
